# dijkstra_bot

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.admin  LICENSE  README.md  build.rs  dbot.sh  default.nix  dev-docker-compose.yml  docker-compose.yml  entrypoint.sh  flake.nix  helix.toml  languages.toml
.cargo/: config.toml
bobot_impl/: Cargo.toml  build.rs
bobot_impl/buildhelpers/: Cargo.toml
bobot_impl/buildhelpers/src/: import.rs  lib.rs
bobot_impl/macros/: Cargo.toml
bobot_impl/macros/src/: import.rs  lib.rs
bobot_impl/macros/strings/: en.yaml
bobot_impl/src/: lib.rs  logger.rs  metadata.rs  statics.rs
bobot_impl/src/core/: mod.rs  prelude.rs
bobot_impl/src/modules/: admin.rs  approvals.rs  bans.rs  blocklists.rs  buttontest.rs  captcha.rs  filters.rs  language.rs  locks.rs  mod.rs  notes.rs  reports.rs  sticker.rs  warns.rs  welcome.rs
bobot_impl/src/persist/: metrics.rs  migrate.rs  mod.rs  redis.rs
bobot_impl/src/persist/admin/: actions.rs  approvals.rs  mod.rs  warns.rs
bobot_impl/src/persist/core/: chat_members.rs  chat_type.rs  conversation_states.rs  conversations.rs  dialogs.rs  media.rs  mod.rs  prelude.rs  stickers.rs  tags.rs  users.rs
bobot_impl/src/tg/: admin_helpers.rs  button.rs  client.rs  command.rs  dialog.rs  markdown.rs  mod.rs  permissions.rs  user.rs
bobot_impl/src/util/: callback.rs  error.rs  filter.rs  glob.rs  mod.rs  string.rs
bot_impl/: Cargo.toml
bot_impl/buildhelpers/src/: import.rs
bot_impl/macros/: Cargo.toml
bot_impl/macros/src/: lib.rs
bot_impl/macros/strings/: bn.yaml  en.yaml  es.yaml  fa.yaml  hi.yaml  ja.yaml  ko.yaml  ta.yaml  uk.yaml  zh-TW.yaml
bot_impl/src/: lib.rs  logger.rs  metadata.rs  statics.rs
bot_impl/src/modules/: admin.rs  approvals.rs  bans.rs  blocklists.rs  buttontest.rs  captcha.rs  fbans.rs  filters.rs  gbans.rs  import_export.rs  language.rs  locks.rs  misc.rs  mod.rs  notes.rs  reports.rs  rules.rs  sticker.rs  warns.rs  welcome.rs
bot_impl/src/modules/formatting/: Form Filling.mud  Murkdown Formatting.mud
bot_impl/src/persist/: mod.rs  redis.rs
bot_impl/src/persist/admin/: actions.rs  authorized.rs  captchastate.rs  fbans.rs  federations.rs  mod.rs  warns.rs
bot_impl/src/persist/core/: button.rs  chat_members.rs  dialogs.rs  entity.rs  media.rs  messageentity.rs  mod.rs  notes.rs  rules.rs  taint.rs  users.rs  welcomes.rs
bot_impl/src/tg/: admin_helpers.rs  button.rs  client.rs  command.rs  dialog.rs  greetings.rs  import_export.rs  markdown.rs  mod.rs  notes.rs  permissions.rs  rosemd.rs  user.rs
bot_impl/src/util/: error.rs  filter.rs  mod.rs  string.rs
buildhelpers/: Cargo.toml
buildhelpers/src/: import.rs
config/: config.dev.toml.example  config.toml.example
entities/: Cargo.toml
entities/src/: lib.rs
entities/src/core/: dialogs.rs  mod.rs  module_schemas.rs  sea_orm_active_enums.rs
macros/: Cargo.toml  build.rs
macros/src/: import.rs  lib.rs  modules.rs
macros/strings/: ja.yaml  ko.yaml  pirate.yaml  zh-TW.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20221217_150626_create_user.rs  m20230113_005856_addlang.rs  m20230118_045027_adminactions.rs  m20230211_202851_expires.rs  m20230214_000001_create_captcha.rs  m20230312_000001_create_welcomes.rs  m20230507_201523_dialog_permissions.rs  m20230509_133432_approvals.rs  m20230629_005040_rules.rs  m20230629_231657_tags_idx.rs  m20230712_063916_fbans.rs  m20230828_202520_user_names.rs  m20230910_204018_entity_in_db.rs  m20231001_175538_warns_markup.rs  m20231029_015614_notes.rs  m20231029_032907_notes_entity.rs  m20231117_045213_taint.rs  m20240220_230802_no_cycle.rs  m20260301_075629_entity_actions.rs  m20260308_143808_persist_username_cache.rs  main.rs
perist/admin/: filters.rs
prometheus/: prometheus.yml
src/: init.rs  lib.rs  logger.rs  main.rs  metadata.rs  statics.rs
src/modules/: admin.rs  approvals.rs  bans.rs  blocklists.rs  buttontest.rs  captcha.rs  clean_service.rs  fbans.rs  filters.rs  formatting.mud  gbans.rs  import_export.rs  language.rs  locks.rs  misc.rs  mod.rs  notes.rs  reports.rs  rules.rs  scripting.rs  sticker.rs  warns.rs  welcome.rs
src/persist/: migrate.rs  mod.rs  redis.rs
src/persist/admin/: actions.rs  captchastate.rs  fbans.rs  fedadmin.rs  gbans.rs  warns.rs
src/persist/core/: button.rs  chat_type.rs  conversation_transitions.rs  dialogs.rs  entity.rs  media.rs  messageentity.rs  module_schemas.rs  notes.rs  taint_chats.rs  users.rs  welcomes.rs
src/persist/entity/: chat_members.rs  conversation_states.rs  conversation_transitions.rs  conversations.rs  stickers.rs  tags.rs
src/tg/: admin_helpers.rs  button.rs  client.rs  command.rs  dialog.rs  federations.rs  greetings.rs  import_export.rs  markdown.rs  mod.rs  notes.rs  permissions.rs  rosemd.rs  user.rs
src/util/: callback.rs  chat_id_fix.rs  error.rs  filter.rs  fmt.rs  glob.rs  mod.rs  scripting.rs  string.rs
src_old/src/: main.rs
strings/: bn.yaml  en.yaml  es.yaml  fa.yaml  hi.yaml  ja.yaml  ko.yaml  ta.yaml  uk.yaml  zh-TW.yaml
translate/: Pipfile  translate.py
