[package]
name = "dijkstra"
version = "0.4.12"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.43"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.28"
redis = { version = "*", features = [
    "acl",
    "aio",
    "r2d2",
    "geospatial",
    "script",
    "tokio-comp",
    "cluster",
    "safe_iterators"
] }
rmp-serde = "1.3.0"
sea-orm = { version = "1.1.15", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
    "default",
    "debug-print",
    "mock",
    "tests-cfg",
] }
sea-query = { version = "0.32.7", features = [
    "uuid",
    "bigdecimal",
    "with-bigdecimal",
    "with-chrono",
    "with-json",
    "backend-postgres",
    "sea-query-derive",
    "derive",
    "with-uuid",
    "thread-safe",
    "postgres-types",
    "with-time",
] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full", "rt"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = "0.1.89"
async_nursery = "0.6.0"
bb8 = "0.9.0"
bb8-redis = "0.24.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
serde_json = "1.0.143"
pomelo = "0.2.1"
regex = "1.11.2"
higher-order-closure = "0.0.5"
botapi = { path = "botapi-rs", features = ["rhai"] }
confy = "1.0.0"
sea-orm-migration = "1.1.15"
nonblock-logger = { version = "0.2.2", features = ["color"] }
dashmap = "6.1.0"
once_cell = "1.21.3"
openssl = { version = "0.10.73", features = ["vendored"] }
prometheus = "0.14.0"
warp = "0.3.7"
prometheus-hyper = "0.2.1"
markdown = "1.0.0"
itertools = "0.14.0"
macros = { path = "macros" }
hyper = "1.7.0"
strum = "0.27.2"
humantime = "2.2.0"
captcha = "1.0.0"
rand = "0.9.2"
base64 = "0.22.1"
glob-match = "0.2.1"
globset = { version = "0.4.16", features = ["serde"] }
wildmatch = "2.4.0"
glob = "0.3.3"
rhai = { version = "1.22.2", features = [
    "serde",
    "sync",
    "metadata",
    "internals",
] }
#llama-rs = { path = "./llama-rs/llama-rs" }
rusty_pool = "0.7.0"
seq-macro = "0.3.6"
convert_case = "0.8.0"
unicase = "2.8.1"
unicase_serde = "0.1.0"
yoke = { version = "0.8.0", features = ["derive", "serde"] }
governor = "0.10.1"
rustls-webpki = "0.103.4"
reqwest = "0.12.23"
bytes = { version = "1.10.1", features = ["serde"] }
lz4_flex = "0.11.5"
sqlx = "0.8.6"
threadpool = "1.8.1"
num_cpus = "1.17.0"
redis-test = { version = "*", features = [
    "futures",
    "aio",
] }

[build-dependencies]
anyhow = "1.0.99"

[workspace]
members = ['migration']
