[package]
name = "dijkstra"
version = "0.4.13"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.44"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.28"
redis = { version = "0.32.5", features = [
    "acl",
    "aio",
    "r2d2",
    "geospatial",
    "script",
    "tokio-comp",
    "tokio-rustls-comp",
    "cluster",
    "safe_iterators"
] }
rmp-serde = "1.3.0"
sea-orm = { version = "1.1.17", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
    "default",
    "debug-print",
    "mock",
    "tests-cfg",
] }
sea-query = { version = "0.32.7", features = [
    "uuid",
    "bigdecimal",
    "with-bigdecimal",
    "with-chrono",
    "with-json",
    "backend-postgres",
    "sea-query-derive",
    "derive",
    "with-uuid",
    "thread-safe",
    "postgres-types",
    "with-time",
] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "rt"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = "0.1.89"
async_nursery = "0.6.0"
bb8 = "0.9.0"
bb8-redis = "0.24.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
serde_json = "1.0.145"
pomelo = "0.2.3"
regex = "1.12.2"
higher-order-closure = "0.0.5"
botapi = { path = "botapi-rs", features = ["rhai"] }
confy = "1.0.0"
sea-orm-migration = "1.1.17"
nonblock-logger = { version = "0.2.2", features = ["color"] }
dashmap = "6.1.0"
once_cell = "1.21.3"
openssl = { version = "0.10.75", features = ["vendored"] }
prometheus = "0.14.0"
warp = "0.3.7"
prometheus-hyper = "0.2.1"
markdown = "1.0.0"
itertools = "0.14.0"
macros = { path = "macros" }
hyper = "1.7.0"
strum = "0.27.2"
humantime = "2.3.0"
captcha = "1.0.0"
rand = "0.9.2"
base64 = "0.22.1"
glob-match = "0.2.1"
globset = { version = "0.4.18", features = ["serde"] }
wildmatch = "2.6.0"
glob = "0.3.3"
rhai = { version = "1.23.6", features = [
    "serde",
    "sync",
    "metadata",
    "internals",
] }
#llama-rs = { path = "./llama-rs/llama-rs" }
rusty_pool = "0.7.0"
seq-macro = "0.3.6"
convert_case = "0.8.0"
unicase = "2.8.1"
unicase_serde = "0.1.0"
yoke = { version = "0.8.1", features = ["derive", "serde"] }
governor = "0.10.1"
rustls-webpki = "0.103.8"
reqwest = "0.12.24"
bytes = { version = "1.10.1", features = ["serde"] }
lz4_flex = "0.11.5"
sqlx = "0.8.6"
threadpool = "1.8.1"
num_cpus = "1.17.0"
redis-test = { version = "0.12.0", features = [
    "futures",
    "aio",
] }

[build-dependencies]
anyhow = "1.0.100"

[workspace]
members = ['migration']
