[package]
name = "bobot_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
lazy_static = "1.4.0"
log = "0.4.17"
redis = { version = "0.22.1", features = ["acl", "aio", "r2d2", "geospatial", "script", "tokio-comp", "cluster"] }
rmp-serde = "1.1.1"
sea-orm = { version = "0.10.6", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros", "default"] }
sea-query = { version = "0.28.0", features = ["uuid", "bigdecimal", "with-bigdecimal", "with-chrono", "with-json", "backend-postgres", "sea-query-derive", "backend-postgres", "derive", "postgres-array", "with-uuid", "thread-safe"] }
serde = { version = "1.0.151", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
anyhow = "1.0.68"
async-trait = "0.1.60"
async_executors = { version = "0.6.0", features = ["tokio_io", "tokio_tp", "tokio", "tokio_timer"] }
async_nursery = "0.5.0"
bb8 = "0.8.0"
bb8-redis = "0.12.0"
chrono = { version = "0.4.23", features = [ "serde" ] }
clap = { version = "4.0.32", features = [ "derive" ] }
serde_json = "1.0.91"
pomelo = "0.1.5"
regex = "1.7.0"
higher-order-closure = "0.0.5"
botapi = { path = "botapi-rs" }
confy = "0.5.1"
sea-orm-migration = "0.10.6"
nonblock-logger = { version = "0.2.2", features = [ "color" ] }
dashmap = "5.4.0"
once_cell = "1.16.0"
openssl = { version = "0.10.45", features = ["vendored"] }
prometheus = "0.13.3"
warp = "0.3.3"
prometheus-hyper = "0.1.5"


[build-dependencies]
macros = { path = "macros" }
anyhow = "1.0.68"
