[package]
name = "bobot_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
lazy_static = "1.4.0"
log = "0.4.17"
redis = { version = "0.22.3", features = ["acl", "aio", "r2d2", "geospatial", "script", "tokio-comp", "cluster"] }
rmp-serde = "1.1.1"
sea-orm = { version = "0.10.7", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros", "default"] }
sea-query = { version = "0.28.3", features = ["uuid", "bigdecimal", "with-bigdecimal", "with-chrono", "with-json", "backend-postgres", "sea-query-derive", "backend-postgres", "derive", "postgres-array", "with-uuid", "thread-safe"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full", "rt"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
async-trait = "0.1.64"
async_nursery = "0.5.0"
bb8 = "0.8.0"
bb8-redis = "0.12.0"
chrono = { version = "0.4.23", features = [ "serde" ] }
clap = { version = "4.1.6", features = [ "derive" ] }
serde_json = "1.0.93"
pomelo = "0.1.5"
regex = "1.7.1"
higher-order-closure = "0.0.5"
botapi = { path = "botapi-rs" }
confy = "0.5.1"
sea-orm-migration = "0.10.7"
nonblock-logger = { version = "0.2.2", features = [ "color" ] }
dashmap = "5.4.0"
once_cell = "1.17.1"
openssl = { version = "0.10.45", features = ["vendored"] }
prometheus = "0.13.3"
warp = "0.3.3"
prometheus-hyper = "0.1.5"
markdown = "0.3.0"
itertools = "0.10.5"
macros = { path = "macros" }
hyper = "0.14.24"
strum = "0.24.1"
humantime = "2.1.0"
captcha = "0.0.9"
rand = "0.8.5"
base64 = "0.21.0"


[build-dependencies]
buildhelpers = { path = "buildhelpers" }
anyhow = "1.0.69"
