[package]
name = "bot_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.23"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.20"
redis = { version = "0.22.3", features = ["acl", "aio", "r2d2", "geospatial", "script", "tokio-comp", "cluster"] }
rmp-serde = "1.1.2"
sea-orm = { version = "0.12.2", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros", "default"] }
sea-query = { version = "0.30.0", features = ["uuid", "bigdecimal", "with-bigdecimal", "with-chrono", "with-json", "backend-postgres", "sea-query-derive", "derive", "with-uuid", "thread-safe", "postgres-types", "with-time"] }
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full", "rt"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
async-trait = "0.1.73"
async_nursery = "0.5.0"
bb8 = "0.8.1"
bb8-redis = "0.12.0"
chrono = { version = "0.4.26", features = [ "serde" ] }
clap = { version = "4.3.23", features = [ "derive" ] }
serde_json = "1.0.105"
pomelo = "0.1.5"
regex = "1.9.3"
higher-order-closure = "0.0.5"
botapi = { path = "botapi-rs" }
confy = "0.5.1"
sea-orm-migration = "0.12.2"
nonblock-logger = { version = "0.2.2", features = [ "color" ] }
dashmap = "5.5.0"
once_cell = "1.18.0"
openssl = { version = "0.10.56", features = ["vendored"] }
prometheus = "0.13.3"
warp = "0.3.5"
prometheus-hyper = "0.1.5"
markdown = "0.3.0"
itertools = "0.10.5"
macros = { path = "macros" }
hyper = "0.14.27"
strum = "0.24.1"
humantime = "2.1.0"
captcha = "0.0.9"
rand = "0.8.5"
base64 = "0.21.2"
glob-match = "0.2.1"
globset = { version = "0.4.13", features = ["serde"] }
wildmatch = "2.1.1"
glob = "0.3.1"
#llama-rs = { path = "./llama-rs/llama-rs" }
rusty_pool = "0.7.0"
seq-macro = "0.3.5"
convert_case = "0.6.0"
unicase = "2.6.0"
unicase_serde = "0.1.0"
yoke = { version = "0.7.1", features = ["derive", "serde"] }
governor = "0.6.0"
rustls-webpki = "0.101.4"
reqwest = "0.11.20"
bytes = { version = "1.4.0", features = ["serde"] }
lz4_flex = "0.11.1"

[build-dependencies]
buildhelpers = { path = "buildhelpers" }
anyhow = "1.0.75"
