[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.66"
quote = "1.0.36"
proc-macro2 = "1.0.85"
include_dir = "0.7.4"
serde_yaml = "0.9.34"
serde = { version = "1.0.203", features = ["derive"] }
lazy_static = "1.4.0"
convert_case = "0.6.0"
proc-macro-crate = "3.1.0"
glob = "0.3.1"
