[package]
name = "dijkstra_migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "dijkstra_migration"
path = "src/lib.rs"

[dependencies]
time = "0.3.47"
sea-schema = { version = "0.16.2", default-features = false, features = [ "debug-print"] }
sea-orm-migration = "1.1.19"
sea-query = { version = "0.32.7", features = ["uuid", "bigdecimal", "with-bigdecimal", "with-chrono", "with-json", "backend-postgres", "sea-query-derive", "backend-postgres", "derive", "with-uuid", "thread-safe"] }
dijkstra = { path = "../" }
botapi = { path = "../botapi-rs" }
tggen = { path = "../botapi-rs/generate" }
async-trait = "0.1.89"
openssl = { version = "0.10.75", features=["vendored"]}
tokio = { version = "1.49.0", features = ["net", "socket2", "io-util", "tokio-macros"] }
rustls-webpki = "0.103.9"
chrono = "0.4.44"

