[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.109"
quote = "1.0.28"
proc-macro2 = "1.0.60"
include_dir = "0.7.3"
serde_yaml = "0.9.21"
serde = { version = "1.0.164", features = ["derive"] }
lazy_static = "1.4.0"
convert_case = "0.6.0"
